--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.0.0
-
+  get_it: ^6.0.0
+  equatable: 2.0.0 
+  database_provider:
+    path: packages/database_provider   
+  authentication_repository:
+    path: packages/authentication_repo
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  geolocation: 1.1.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,8 +52,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
