--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs.dorms_for_you">
     <uses-permission android:name="android.permission.INTERNET" />
+    <queries>
+    <package android:name="com.google.android.apps.maps" />
+</queries>
    <application
         android:label="dorms_for_you"
         android:icon="@mipmap/ic_launcher"> 
