--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  geolocation: 1.1.2
+  geolocator: ^7.0.1
+  url_launcher: ^6.0.3
   
 dev_dependencies:
   flutter_test:
