--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs.dorms_for_you">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <queries>
     <package android:name="com.google.android.apps.maps" />
 </queries>
    <application
+        android:usesCleartextTraffic="true"
         android:label="dorms_for_you"
         android:icon="@mipmap/ic_launcher"> 
         <activity
