--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   geolocator: ^7.0.1
   url_launcher: ^6.0.3
-  
+  flutter_swiper: ^1.1.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
