--- a/frontend/packages/authentication_repo/pubspec.yaml
+++ b/frontend/packages/authentication_repo/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   # firebase_core: ^0.5.0
   # google_sign_in: ^4.5.4
   http: ^0.13.1
-
+  flutter_secure_storage: ^4.1.0
 
 dev_dependencies:
   flutter_test:
