--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   geolocator: ^7.0.1
   url_launcher: ^6.0.3
   flutter_swiper: ^1.1.6
+  http: 0.13.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
